# vlm-judge-calibration

./: .gitignore  README.md  pyproject.toml
configs/: confusables.yaml  degradations.yaml  edit_types.yaml  templates.yaml  vlm_prompts.yaml
latex/: 01introduction.tex  02relatedwork.tex  03methodology.tex  04evaluationanddiscussion.tex  05limitations.tex  06conclusion.tex  90proposaladditions.tex  Bibliografia.bib  abstract.tex  scraps.tex  thesis.tex  utuftthesis.cls
scripts/: compare_strategies.py  generate.py  generate_full.py  generate_pilot.py  run_analysis.py  run_qwen.py  run_stats.py  validate_results.py  visualize_pilot.py
src/: api_tracker.py  edit_applicator.py  pipeline.py  render.py
src/analysis/: curves.py  heatmap.py  stats.py
src/degradation/: color_utils.py  engine.py  image_layer.py  specs.py
src/evaluation/: gemini_batch.py  judge.py  parser.py  runner.py
src/layouts/: __init__.py  core.py  definitions.py
src/templates/: templates.py
tests/: test_degradation.py  test_layouts.py  test_parser.py  test_templates.py
thesis/: 3.1-design-rationale.md  3.2-stimulus-generation.md  3.3-evaluation-protocol.md  3.4-analysis-methods.md  4.1-data-quality.md  4.2-control-conditions.md  4.3-exp1-perceptual-sensitivity.md  4.3-main-results.md  4.4-detection-thresholds.md  4.4-rq-answers.md  4.5-exp2-edit-judgment.md  4.5-supporting-analyses.md  4.6-perception-judgment-gap.md  4.7-cross-model-blind-spots.md  chapter-3-methodology.md  chapter-4-results.md
